force-app/main/default/objects/Registration_x_Session__c/Registration_x_Session__c.object-meta.xml
<CustomObject>
    <description
  >Links an event registration to a session to indicate that the attendee is a speaker, moderator or attendee.</description>
    <label>Registration to Session</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Registration to Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations to Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>