force-app/main/default/objects/Registration_x_Session__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >The order that the registrant displays with other registrants.</description>
    <inlineHelpText
  >The order that the registrant displays with other registrants.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>