force-app/main/default/objects/Registration_x_Session__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The registrant</description>
    <inlineHelpText>The registrant</inlineHelpText>
    <label>Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Registrations_to_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>