force-app/main/default/objects/Registration_x_Session__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <defaultValue>&quot;speaker&quot;</defaultValue>
    <description>Defines the role a registrant has in a session</description>
    <inlineHelpText
  >Defines the role a registrant has in a session</inlineHelpText>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>speaker</fullName>
            </value>
            <value>
                <fullName>moderator</fullName>
            </value>
            <value>
                <fullName>attendee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>