force-app/main/default/objects/Registration_x_Session__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The event session</description>
    <label>Session</label>
    <referenceTo>Event_Session2__c</referenceTo>
    <relationshipLabel>Registrants</relationshipLabel>
    <relationshipName>Registrations_to_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>